# sqrl_core

./: CMakeLists.txt  README.md
cli/: CMakeLists.txt  main.c
lib/: CMakeLists.txt  api.c  api.h  base64.c  base64.h  config.h.in  crypto.c  crypto.h  crypto_dep.h.in  dict.c  dict.h  impl.c  impl.c.bk  impl.h  keys.h  map.c  map.h  network.h  protocol.c  protocol.h  request.c  request.h  response.c  response.h  s4.c  s4.h  server.c  server.h  sqrl_util.c  sqrl_util.h  strbuf.c  strbuf.h  tif.h  utils.c  utils.h
lib/net/: CMakeLists.txt
lib/net/apple/: CMakeLists.txt  network.h.txt  network_apple.c
test/: CMakeLists.txt  gcmtest.c  main.c  minunit.h  run_diff_test.cmake  runtest.cmake
test/data/: enscrypt.txt  test_load.sqrl
